# gulkan

./: .gitignore  .gitlab-ci.yml  LICENSE  meson.build  meson_options.txt
.gitlab-ci/debian_sid/: changelog  control  libgulkan-utils.install  rules
.gitlab-ci/debian_sid/extra/: prepare-commit-package.sh
debian/: changelog  control  copyright  libgulkan-0.16-0.symbols  libgulkan-doc.install
debian/patches/: 0001-Fix-incompatible-types.patch  series
doc/: .gitignore  gulkan-docs.xml  gulkan-sections.txt  meson.build
doc/xml/: meson.build
examples/: cairo.c  cube.c  dmabuf-drm-modifiers.c  dmabuf.c  external-memory.c  meson.build  normal-map.c  pango.c  pixbuf-linear.c  pixbuf.c  threading.c  toy.c
examples/common/: common.c  common.h  meson.build  model-renderer.c  model-renderer.h  plane-example.c  plane-example.h  plane-renderer.c  plane-renderer.h
res/: tests.gresource.xml
shaders/: cube.frag.spv  cube.vert.spv  meson.build  normal-map.frag  normal-map.vert  shaders.gresource.xml  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv  toy.frag.template  toy.vert
src/: gulkan-buffer.c  gulkan-buffer.h  gulkan-cmd-buffer-private.h  gulkan-cmd-buffer.c  gulkan-cmd-buffer.h  gulkan-context.c  gulkan-context.h  gulkan-descriptor-pool.c  gulkan-descriptor-pool.h  gulkan-descriptor-set.c  gulkan-descriptor-set.h  gulkan-device.c  gulkan-device.h  gulkan-frame-buffer.c  gulkan-frame-buffer.h  gulkan-geometry.c  gulkan-geometry.h  gulkan-instance.c  gulkan-instance.h  gulkan-pipeline.c  gulkan-pipeline.h  gulkan-queue.c  gulkan-queue.h  gulkan-render-pass.c  gulkan-render-pass.h  gulkan-renderer.c  gulkan-renderer.h  gulkan-swapchain-renderer.c  gulkan-swapchain-renderer.h  gulkan-swapchain.c  gulkan-swapchain.h  gulkan-texture.c  gulkan-texture.h  gulkan-uniform-buffer.c  gulkan-uniform-buffer.h  gulkan-vertex-buffer.c  gulkan-vertex-buffer.h  gulkan-window-wayland.c  gulkan-window-wayland.h  gulkan-window-xcb.c  (+5 more)
tests/: meson.build  test_client.c  test_context.c  test_device.c  test_instance.c  test_renderer.c  test_texture.c  test_texture_external.c  test_window.c
