ent_conf = configuration_data()
ent_conf.set('PACKAGE', 'gulkan')
ent_conf.set('PACKAGE_BUGREPORT', 'https://gitlab.freedesktop.org/xrdesktop/gulkan')
ent_conf.set('PACKAGE_NAME', 'gulkan')
ent_conf.set('PACKAGE_STRING', 'gulkan')
ent_conf.set('PACKAGE_TARNAME', 'gulkan-' + meson.project_version())
ent_conf.set('PACKAGE_URL', 'https://gitlab.freedesktop.org/xrdesktop/gulkan')
ent_conf.set('PACKAGE_VERSION', meson.project_version())
ent_conf.set('PACKAGE_API_VERSION', api_version)
configure_file(input: 'gtkdocentities.ent.in', output: 'gtkdocentities.ent', configuration: ent_conf)
